--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
-
-body {
-  font-family: 'Lato', Helvetica Neue, Helvetica, Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
